--- a/index.xhtml
+++ b/index.xhtml
@@ -19,6 +19,11 @@
 
 <body>
 
+<div class="header">
+    <h1>2048</h1>
+    <p>By Maxime Ton</p>
+</div>
+
 <div id="main-div"></div>
 
 <script type="text/babel" src="js/game.js"></script>
