--- a/index.xhtml
+++ b/index.xhtml
@@ -4,7 +4,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
-<!-- IFT3225 TP2 -->
+<!-- IFT3225-TP2 -->
 <!-- Travail par Maxime Ton -->
 <!-- Matricule: 20143044 -->
 
