Ajout au rapport et au html

--- a/index.xhtml
+++ b/index.xhtml
@@ -28,5 +28,11 @@
 
 <script type="text/babel" src="js/game.js"></script>
 
+<div id="controls">
+    <h3>Controls:</h3>
+    <p>Use the arrow keys to move the board.</p>
+    <p>Press N to start a new game.</p>
+</div>
+
 </body>
 </html>
