--- a/index.xhtml
+++ b/index.xhtml
@@ -9,7 +9,7 @@
 <!-- Matricule: 20143044 -->
 
 <head>
-    <title>IFT3225-TP2</title>
+    <title>IFT3225 TP2</title>
     <script type="application/javascript" src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
     <script type="application/javascript" src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
     <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
